--- a/Web/index.html
+++ b/Web/index.html
@@ -22,26 +22,35 @@
 			<a href="https://betterdiscord.app/" target="_BLANK"><img src="img/logo_large.svg"></a>
 		</div>
 		<div class="navseparator"></div>
+		<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 20%; width: 140px !important;">
+		<a class="BDa"href="https://betterdiscord.app/" target="_BLANK">
 			<div class="navinstallerBD">
 				<span class="navinstallerBDtext">Installer BetterDiscord</span>
-				<img class="imginstallerBD" src="img/point_up.svg">
 			</div>
+		</a>
+		</div>
+		<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 33%; width: 77px !important;">
 		<a href="#theme" class="navthemea">
 			<div class="navtheme">
-				Thèmes
+				<span>Thèmes</span>
 			</div>
 		</a>
-		<a href="#plugin" class="navpluga">
-			<div class="navplug">
-				Plugins
-			</div>
-		</a>
+		</div>
+		<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 33%; width: 77px !important;">
+			<a href="#plugin" class="navpluga">
+				<div class="navplug">
+					<span>Plugins</span>
+				</div>
+			</a>
+		</div>
 		<div class="navseparator"></div>
-		<a href="https://discord.com/" target="_BLANK" class="joina">
-			<div id="join">
-				Join Me !
-			</div>
-		</a>
+		<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 31%; width: 87px !important;">
+			<a href="https://discord.com/invite/pMu2X4w3ru" target="_BLANK" class="joina">
+				<div id="join">
+					<span>Join Me !</span>
+				</div>
+			</a>
+		</div>
 		<div class="navseparator"></div>
 		<a href="https://discord.com/" target="_BLANK">
 			<div class="Discordcom">
@@ -300,7 +309,7 @@
 						</a>
 					</div>
 					<div class="SplitLargeMessagesseparator"></div>
-					<a class="SplitLargeMessagesdownloada" href="https://betterdiscord.app/Download?id=98">
+					<a class="SplitLargeMessagesdownloada" href="https://betterdiscord.app/Download?id=228">
 						<div class="SplitLargeMessagesdownloaddiv">
 								<svg width="16px" height="16px" viewBox="0 0 16 16" s>
 									<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
