--- a/Web/index.html
+++ b/Web/index.html
@@ -23,11 +23,11 @@
 		</div>
 		<div class="navseparator"></div>
 		<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 20%; width: 140px !important;">
-		<a class="BDa"href="https://betterdiscord.app/" target="_BLANK">
-			<div class="navinstallerBD">
-				<span class="navinstallerBDtext">Installer BetterDiscord</span>
-			</div>
-		</a>
+			<a class="BDa"href="https://betterdiscord.app/" target="_BLANK">
+				<div class="navinstallerBD">
+					<span class="navinstallerBDtext">Installer BetterDiscord</span>
+				</div>
+			</a>
 		</div>
 		<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 33%; width: 77px !important;">
 		<a href="#theme" class="navthemea">
@@ -88,15 +88,17 @@
 						<div class="Beta" style="font-family: Calibri, sans-serif;"><strong>BETA</strong></div>
 					</div>
 					<div class="DiscordEditseparator"></div>
-					<a class="DiscordEditdownloada" href="https://cdn.discordapp.com/attachments/922912670418599996/924448753266614302/DiscordEditUpadte.theme.css" onclick="n2();">
-						<div class="DiscordEditdownloaddiv">
-								<svg width="16px" height="16px" viewBox="0 0 16 16" s>
-									<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
-									</path>
-								</svg>
-							<span>Download</span>
-						</div>
-					</a>
+					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
+						<a class="DiscordEditdownloada" href="https://cdn.discordapp.com/attachments/922912670418599996/924448753266614302/DiscordEditUpadte.theme.css" onclick="n2();">
+							<div class="DiscordEditdownloaddiv">
+									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
+										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
+										</path>
+									</svg>
+								<span>Download</span>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -140,15 +142,17 @@
 						</a>
 					</div>
 					<div class="RadialStatusseparator"></div>
-					<a class="RadialStatusdownloada" href="https://betterdiscord.app/Download?id=32">
-						<div class="RadialStatusdownloaddiv">
+					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
+						<a class="RadialStatusdownloada" href="https://betterdiscord.app/Download?id=32">
+							<div  class="RadialStatusdownloaddiv">
 								<svg width="16px" height="16px" viewBox="0 0 16 16" s>
 									<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
 									</path>
 								</svg>
-							<span>Download</span>
-						</div>
-					</a>
+								<span>Download</span>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -211,15 +215,17 @@
 						</a>
 					</div>
 					<div class="ReadAllNotificationsButtonseparator"></div>
-					<a class="ReadAllNotificationsButtondownloada" href="https://betterdiscord.app/Download?id=94">
-						<div class="ReadAllNotificationsButtondownloaddiv">
-								<svg width="16px" height="16px" viewBox="0 0 16 16" s>
-									<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
-									</path>
-								</svg>
-							<span>Download</span>
-						</div>
-					</a>
+					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
+						<a class="ReadAllNotificationsButtondownloada" href="https://betterdiscord.app/Download?id=94">
+							<div class="ReadAllNotificationsButtondownloaddiv">
+									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
+										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
+										</path>
+									</svg>
+								<span>Download</span>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="CallTimeCounter">
 					<img class="CallTimeCounterimg" src="https://betterdiscord.app/resources/thumbnails/445.png" sizes="380x184">
@@ -309,15 +315,17 @@
 						</a>
 					</div>
 					<div class="SplitLargeMessagesseparator"></div>
-					<a class="SplitLargeMessagesdownloada" href="https://betterdiscord.app/Download?id=228">
-						<div class="SplitLargeMessagesdownloaddiv">
-								<svg width="16px" height="16px" viewBox="0 0 16 16" s>
-									<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
-									</path>
-								</svg>
-							<span>Download</span>
-						</div>
-					</a>
+					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
+						<a class="SplitLargeMessagesdownloada" href="https://betterdiscord.app/Download?id=228">
+							<div class="SplitLargeMessagesdownloaddiv">
+									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
+										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
+										</path>
+									</svg>
+								<span>Download</span>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="GameActivityToggle">
 					<img class="GameActivityToggleimg" src="https://betterdiscord.app/resources/thumbnails/306.png" sizes="380x184">
@@ -367,15 +375,17 @@
 						</a>
 					</div>
 					<div class="GameActivityToggleseparator"></div>
-					<a class="GameActivityToggledownloada" href="https://betterdiscord.app/Download?id=120">
-						<div class="GameActivityToggledownloaddiv">
-								<svg width="16px" height="16px" viewBox="0 0 16 16" s>
-									<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
-									</path>
-								</svg>
-							<span>Download</span>
-						</div>
-					</a>
+					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
+						<a class="GameActivityToggledownloada" href="https://betterdiscord.app/Download?id=120">
+							<div class="GameActivityToggledownloaddiv">
+									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
+										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
+										</path>
+									</svg>
+								<span>Download</span>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="CustomStatusPresets">
 					<img class="CustomStatusPresetsimg" src="https://betterdiscord.app/resources/thumbnails/246.png" sizes="380x184">
@@ -425,15 +435,17 @@
 						</a>
 					</div>
 					<div class="CustomStatusPresetsseparator"></div>
-					<a class="CustomStatusPresetsdownloada" href="https://betterdiscord.app/Download?id=71">
-						<div class="CustomStatusPresetsdownloaddiv">
-								<svg width="16px" height="16px" viewBox="0 0 16 16" s>
-									<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
-									</path>
-								</svg>
-							<span>Download</span>
-						</div>
-					</a>
+					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
+						<a class="CustomStatusPresetsdownloada" href="https://betterdiscord.app/Download?id=71">
+							<div class="CustomStatusPresetsdownloaddiv">
+									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
+										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
+										</path>
+									</svg>
+								<span>Download</span>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
