--- a/DiscordEdit/web/index.html
+++ b/DiscordEdit/web/index.html
@@ -36,11 +36,8 @@
 	<title>BetterDiscord Discord Edit</title>
 </head>
 <body>
-	<div id="navbackground" style="visibility: hidden;">
+	<div id="navbackground" style="visibility: hidden;" onclick="Menubutton1(); Menu1();">
 		<div id="nav">
-			<div id="MenubuttonClose" style="position: fixed;" onclick="Menubutton1(); Menu1();">
-				X
-			</div>
 			<div class="BDimg">
 				<a href="https://betterdiscord.app/" target="_BLANK"><img src="img/logo_large.svg"></a>
 			</div>
@@ -122,7 +119,7 @@
 					</div>
 					<div class="DiscordEditseparator"></div>
 					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
-						<a class="DiscordEditdownloada" href="https://cdn.discordapp.com/attachments/922912670418599996/925216011492405258/DiscordEditUpadte.theme.css" onclick="n2();">
+						<a class="DiscordEditdownloada" href="https://cdn.discordapp.com/attachments/922912670418599996/924448753266614302/DiscordEditUpadte.theme.css" onclick="n2();">
 							<div class="DiscordEditdownloaddiv">
 									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
 										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
