--- a/DiscordEdit/web/index.html
+++ b/DiscordEdit/web/index.html
@@ -287,15 +287,17 @@
 						</a>
 					</div>
 					<div class="CallTimeCounterseparator"></div>
-					<a class="CallTimeCounterdownloada" href="https://betterdiscord.app/Download?id=228">
-						<div class="CallTimeCounterdownloaddiv">
-								<svg width="16px" height="16px" viewBox="0 0 16 16" s>
-									<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
-									</path>
-								</svg>
-							<span>Download</span>
-						</div>
-					</a>
+					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
+						<a class="CallTimeCounterdownloada" href="https://betterdiscord.app/Download?id=228">
+							<div class="CallTimeCounterdownloaddiv">
+									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
+										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
+										</path>
+									</svg>
+								<span>Download</span>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="SplitLargeMessages">
 					<img class="SplitLargeMessagesimg" src="https://betterdiscord.app/resources/thumbnails/285.png" sizes="380x184">
