--- a/DiscordEdit/web/index.html
+++ b/DiscordEdit/web/index.html
@@ -46,7 +46,7 @@
 	<title>BetterDiscord Discord Edit</title>
 </head>
 <body>
-	<div id="navbackground" style="visibility: hidden;">onclick="Menubutton1(); Menu1();"
+	<div id="navbackground" style="visibility: hidden;">
 		<div id="fixedtopbar2" style="position: fixed;">
 			<div id="Menubutton2" onclick="Menubutton1(); Menu1(); ">
 				<p style="margin-top:1.5%;">X</p>
