--- a/DiscordEdit/web/index.html
+++ b/DiscordEdit/web/index.html
@@ -130,12 +130,62 @@
 								<path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"></path>
 							</svg>
 						</a>
+						<a class="DiscordEditWebsitea" href="https://discord.com/invite/pMu2X4w3ru" target="_blank">
+							<svg style="width: 18px; height: 18px;" fill="white" viewBox="0 0 28 20">
+								<path fill="white" d="M23.0212 1.67671C21.3107 0.879656 19.5079 0.318797 17.6584 0C17.4062 0.461742 17.1749 0.934541 16.9708 1.4184C15.003 1.12145 12.9974 1.12145 11.0283 1.4184C10.819 0.934541 10.589 0.461744 10.3368 0.00546311C8.48074 0.324393 6.67795 0.885118 4.96746 1.68231C1.56727 6.77853 0.649666 11.7538 1.11108 16.652C3.10102 18.1418 5.3262 19.2743 7.69177 20C8.22338 19.2743 8.69519 18.4993 9.09812 17.691C8.32996 17.3997 7.58522 17.0424 6.87684 16.6135C7.06531 16.4762 7.24726 16.3387 7.42403 16.1847C11.5911 18.1749 16.408 18.1749 20.5763 16.1847C20.7531 16.3332 20.9351 16.4762 21.1171 16.6135C20.41 17.0369 19.6639 17.3997 18.897 17.691C19.3052 18.4993 19.7718 19.2689 20.3021 19.9945C22.6677 19.2689 24.8929 18.1364 26.8828 16.6466H26.8893C27.43 10.9731 25.9665 6.04728 23.0212 1.67671ZM9.68041 13.6383C8.39754 13.6383 7.34085 12.4453 7.34085 10.994C7.34085 9.54272 8.37155 8.34973 9.68041 8.34973C10.9893 8.34973 12.0395 9.54272 12.0187 10.994C12.0187 12.4453 10.9828 13.6383 9.68041 13.6383ZM18.3161 13.6383C17.0332 13.6383 15.9765 12.4453 15.9765 10.994C15.9765 9.54272 17.0124 8.34973 18.3161 8.34973C19.6184 8.34973 20.6751 9.54272 20.6543 10.994C20.6543 12.4453 19.6184 13.6383 18.3161 13.6383Z">
+								</path>
+							</svg>
+						</a>
 						<div class="Beta" style="font-family: Calibri, sans-serif;"><strong>BETA</strong></div>
 					</div>
 					<div class="DiscordEditseparator"></div>
 					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
-						<a class="DiscordEditdownloada" href="https://cdn.discordapp.com/attachments/922912670418599996/945306467043512360/DiscordEditUpadte.theme.css" onclick="n2();">
+						<a class="DiscordEditdownloada" href="https://cdn.discordapp.com/attachments/922912670418599996/924448753266614302/DiscordEditUpadte.theme.css" onclick="n2();">
 							<div class="DiscordEditdownloaddiv">
+									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
+										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
+										</path>
+									</svg>
+								<span>Download</span>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="MC_theme">
+					<img class="MC_themeimg" src="https://cdn.discordapp.com/attachments/956599296646594660/957318378203250858/unknown.png" sizes="380x184">
+					<div class="MC_themetitle"><strong>Minecraft thème</strong></div>
+					<div class="MC_themetitledesc">Description :</div>
+					<ul>
+						<li>
+							<div class="MC_themedesc">
+								Tu aimes Minecraft ? Parfait c'est ce qu'il te faut !
+							</div>
+						</li>
+					</ul>
+					<div class="MC_themetitleauthor">Auteur :</div>
+					<div class="MC_themeauthor">
+						E.#7528
+					</div>
+					<div class="MC_themeseparator"></div>
+					<div class="MC_themeWebsite">
+						<a class="MC_themeWebsitea" href="https://github.com/Evounnn/evounnn.github.io/tree/main/DiscordEdit" target="_blank">
+							<svg viewBox="2 2 20 20" fill="#FFFFFF" style="width: 18px; height: 18px;">
+								<path d="M0 0h24v24H0z" fill="none"></path>
+								<path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"></path>
+							</svg>
+						</a>
+						<a class="MC_themeWebsitea" href="https://discord.com/invite/pMu2X4w3ru" target="_blank">
+							<svg style="width: 18px; height: 18px;" fill="white" viewBox="0 0 28 20">
+								<path fill="white" d="M23.0212 1.67671C21.3107 0.879656 19.5079 0.318797 17.6584 0C17.4062 0.461742 17.1749 0.934541 16.9708 1.4184C15.003 1.12145 12.9974 1.12145 11.0283 1.4184C10.819 0.934541 10.589 0.461744 10.3368 0.00546311C8.48074 0.324393 6.67795 0.885118 4.96746 1.68231C1.56727 6.77853 0.649666 11.7538 1.11108 16.652C3.10102 18.1418 5.3262 19.2743 7.69177 20C8.22338 19.2743 8.69519 18.4993 9.09812 17.691C8.32996 17.3997 7.58522 17.0424 6.87684 16.6135C7.06531 16.4762 7.24726 16.3387 7.42403 16.1847C11.5911 18.1749 16.408 18.1749 20.5763 16.1847C20.7531 16.3332 20.9351 16.4762 21.1171 16.6135C20.41 17.0369 19.6639 17.3997 18.897 17.691C19.3052 18.4993 19.7718 19.2689 20.3021 19.9945C22.6677 19.2689 24.8929 18.1364 26.8828 16.6466H26.8893C27.43 10.9731 25.9665 6.04728 23.0212 1.67671ZM9.68041 13.6383C8.39754 13.6383 7.34085 12.4453 7.34085 10.994C7.34085 9.54272 8.37155 8.34973 9.68041 8.34973C10.9893 8.34973 12.0395 9.54272 12.0187 10.994C12.0187 12.4453 10.9828 13.6383 9.68041 13.6383ZM18.3161 13.6383C17.0332 13.6383 15.9765 12.4453 15.9765 10.994C15.9765 9.54272 17.0124 8.34973 18.3161 8.34973C19.6184 8.34973 20.6751 9.54272 20.6543 10.994C20.6543 12.4453 19.6184 13.6383 18.3161 13.6383Z">
+								</path>
+							</svg>
+						</a>
+						<div class="Beta" style="font-family: Calibri, sans-serif;"><strong>BETA</strong></div>
+					</div>
+					<div class="MC_themeseparator"></div>
+					<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 147.5px; width: 105px !important">
+						<a class="MC_themedownloada" href="https://cdn.discordapp.com/attachments/956599296646594660/957321700062683136/Minecraft_theme.theme.css" onclick="n2();">
+							<div class="MC_themedownloaddiv">
 									<svg width="16px" height="16px" viewBox="0 0 16 16" s>
 										<path fill="currentColor" fill-rule="evenodd" d="M7.47 10.78a.75.75 0 001.06 0l3.75-3.75a.75.75 0 00-1.06-1.06L8.75 8.44V1.75a.75.75 0 00-1.5 0v6.69L4.78 5.97a.75.75 0 00-1.06 1.06l3.75 3.75zM3.75 13a.75.75 0 000 1.5h8.5a.75.75 0 000-1.5h-8.5z">
 										</path>
