--- a/DiscordEdit/web/index.html
+++ b/DiscordEdit/web/index.html
@@ -54,7 +54,7 @@
 
 
 	</script>
-	<title>Test - BetterDiscord Discord Edit</title>
+	<title>BetterDiscord Discord Edit</title>
 </head>
 <body>
 	<div id="navbackground" style="visibility: hidden;">
