--- a/DiscordEdit/web/index.html
+++ b/DiscordEdit/web/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="icon/ico" sizes="32x32" href="img/D_app_dark.ico">
 	<script type="text/javascript">
 		function n1() {  
-   			 alert ("Lorsque vous téléchargerez les plugins, vous aurez des alertes pour vous prevenir de télécharger d'autres plugins, il faut les télécharger pour que vos plugins fonctionnent !");  
+   			 alert ("Lorsque vous mettrerez les plugins sur betterdiscord, vous aurez des alertes pour vous prevenir de télécharger d'autres plugins, il faut les télécharger pour que vos plugins fonctionnent !");  
 			} 
 		function n2() {  
    			 alert ("Pour information ceci est une BETA. Des Mises à jour auront lieu ce qui demandera à réinstaller le thème, rejoint donc le discord pour les informations !");  
