--- a/DiscordEdit/web/index.html
+++ b/DiscordEdit/web/index.html
@@ -8,6 +8,9 @@
 	<title>
 		Evoun Hub
 	</title>
+	<script>
+		alert("Bonjour, je préviens que tout ce qui se trouve ici est officiellement obselète. Merci d'avoir supporter Discord Edit.");
+	</script>
 </head>
 <body>
 	<div class="nav-1">
